# vk-fractal

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  cpplint.cfg
.github/workflows/: build.yml  pre-commit.yml
cmake/: compile_shaders.cmake
shaders/: common.glsl  field_interface.glsl  fullscreen.frag  fullscreen.vert
shaders/fields/: julia.glsl  mandelbox.glsl  mandelbulb.glsl
src/: main.cpp
src/app/: app.cpp  app.hpp
src/gfx/: camera.cpp  camera.hpp  frame_resources.cpp  frame_resources.hpp  fullscreen_pipeline.cpp  fullscreen_pipeline.hpp  imgui_layer.cpp  imgui_layer.hpp  swapchain.cpp  swapchain.hpp  vk_bootstrap.hpp  vk_context.cpp  vk_context.hpp
src/util/: checks.cpp  checks.hpp  read_file.cpp  read_file.hpp
